Change running indicator to one that is more easily visible when scrolling. Fixes #237

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -35,33 +35,46 @@ span.internal {
   height: 15px;
 }
 
-.pulse {
-  vertical-align: bottom;
+.spinner {
   width: 1em;
   height: 1em;
-  background-color: #333;
+
+  position: relative;
   display: inline-block;
-  border-radius: 100%;  
-  -webkit-animation: scaleout 1.0s infinite ease-in-out;
-  animation: scaleout 1.0s infinite ease-in-out;
+  vertical-align: bottom;
 }
 
-@-webkit-keyframes scaleout {
-  0% { -webkit-transform: scale(0.0) }
-  100% {
-    -webkit-transform: scale(1.0);
-    opacity: 0;
-  }
+.double-bounce1, .double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #333;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  -webkit-animation: bounce 2.0s infinite ease-in-out;
+  animation: bounce 2.0s infinite ease-in-out;
 }
 
-@keyframes scaleout {
-  0% { 
+.double-bounce2 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+@-webkit-keyframes bounce {
+  0%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes bounce {
+  0%, 100% {
     transform: scale(0.0);
     -webkit-transform: scale(0.0);
-  } 100% {
+  } 50% {
     transform: scale(1.0);
     -webkit-transform: scale(1.0);
-    opacity: 0;
   }
 }
 
